# DeepCardioSim

./: .gitignore  README.md  README.rst  environment.yml  pyproject.toml  setup.py
backend/: .env.example  .env.path  CRTPlanning.py  InputProcessing.py  README.rst  crt_tasks.py  dscism-backend.service.example  format_conversions.py  generate_EF.py  gpu_pool.py  main.py  redis.conf  run_servers.sh  state_management.py  stop_servers.sh  tasks.py  vtkpy3utils.py
backend/src/: CRTPlanning.py  InputProcessing.py  generate_EF.py  vtkpy3utils.py
basic_examples/: test.py
basic_examples/2D_steady_state/GINO/: data_processing.py  post_training.ipynb
basic_examples/2D_steady_state/GNN/: data_loading.py  data_processing.py  gnn_model.py  training.py
basic_examples/2D_time_dependent/: generate_dataset.py  solve_one_case.ipynb
basic_examples/2D_time_dependent/GINO/: data_loading.py  data_processing.py  post_training.ipynb  training.py
basic_examples/3D_time_dependent/: solve_one_case.ipynb
basic_examples/3D_time_dependent/GINO/: data_processing.py  in_nbr.py  training.py
cardiac_examples/electrophysio/: README.rst  data_processing.py  handle_npy_files.py  post_training.ipynb  training.py
cardiac_examples/electrophysio/GINO/: data_loading.py  data_processing.py  gino_data_handling.py  in_nbr.py  model.py  post_training.ipynb  training.py
cardiac_examples/electrophysio/GNN/: gnn_data_handling.py
cardiac_models/electrophysio/: README.rst  data_loading.py  data_processing.py  generate_interpolated_cases.py  handle_npy_files.py  post_training.ipynb  predict.py  raw_data_handling.py  training.py
cardiac_models/electrophysio/GINO/: gino.py  gino_data_handling.py  model.py
cardiac_models/electrophysio/GNN/: gnn.py  gnn_data_handling.py  model.py
deepcardio/: __init__.py  predict.py  train_state.py  trainer.py  utils.py
deepcardio/electrophysio/: __init__.py
deepcardio/losses/: data_losses.py  finite_diff.py
deepcardio/meshdata/: __init__.py  dataset.py
deepcardio/neuralop_core/: utils.py
deepcardio/neuralop_core/layers/: embeddings.py  fno_block.py  integral_transform.py  mlp.py  normalization_layers.py  padding.py  resample.py  segment_csr.py  skip_connections.py  spectral_convolution.py  spherical_convolution.py
deepcardio/neuralop_core/models/: __init__.py
deepcardio/neuralop_core/transforms/: __init__.py  base_dataprocessor.py  base_transforms.py  normalizers.py
deepcardio/plots/: __init__.py  paper.mplstyle  plots.py
examples/2D_steady_state/: generate_dataset.py  shell_generate_dataset.sh  solve_one_case.ipynb
examples/2D_steady_state/GINO/: data_loading.py  gino.py  training.py
examples/2D_steady_state/GNN/: data_loading.py  post_training.ipynb
examples/2D_time_dependent/: generate_dataset.py  solve_one_case.ipynb
examples/2D_time_dependent/GINO/: gino.py  post_training.ipynb  training.py
examples/3D_time_dependent/: generate_dataset.py
examples/3D_time_dependent/GINO/: data_loading.py  gino.py  post_training.ipynb
fenics_containers/docker/: dolfinx_docker_enduser_jupyter+pytorch-cpu
